@@ -1,5 +1,9 @@
 2025-01-03  Zhengyi Fu  <i@fuzy.me>
 
+	* init.el (+indent-tabs-mode--hack-local-variables-h): Renamed
+	from `+indent-tabs-mode--find-file-h'.  It should be added to
+	hack-local-variables-hook now.
+
 	* site-lisp/exwm-settings.el: Enable exwm-xim-mode by default.
 	Add package exwm-firefox.
 
